PAL-1085 added akka-http in-place of tomcat